Gtk-3.2x&4.0: [Rhythmbox] Prevent unwanted jumping button heights in alternate toolbar mode
Adwaita-ism? :/

--- a/src/gtk/sass/common/_misc.scss
+++ b/src/gtk/sass/common/_misc.scss
@@ -1164,6 +1164,7 @@ window.background > box.vertical > box.vertical > toolbar.horizontal {
 // hard-coded spacing depends on non-scalable unit,
 // seems cover-art widget is the most biggest thing?
 $album_art: 54px;
+$album_art_small: 36px;
 $min_button: 24px - (1px * 2);
 $toolitem_margin: ($album_art - $min_button) / 2;
 
@@ -1209,12 +1210,6 @@ window.background > box.vertical > toolbar.primary-toolbar {
   }
 }
 
-headerbar.titlebar > box.horizontal > box.horizontal {
-  // 'search' button
-  > button.toggle:not(.text-button):not(.image-button):not(.popup) {
-  }
-}
-
 @if $maj_ver == 3 {
   notebook > stack grid.horizontal > grid.horizontal > grid.horizontal {
     button.flat.toggle { // 'edit' and 'browse' button
@@ -1256,6 +1251,16 @@ dialog.background > box.dialog-vbox.vertical > box.vertical {
         @include radius($r_2);
       }
     }
+  }
+}
+
+// bottom toolbar buttons (alternate toolbar mode)
+paned.sidebar-paned + box.vertical > frame + toolbar > toolitem {
+  > .linked > button,
+  > box.horizontal > button.toggle { // prevent jumping button heights
+    min-width: $album_art_small;
+    min-height: $album_art_small;
+    padding: 0;
   }
 }
 
